# Wallet-Analyzer

./: .gitignore  README.md  pyproject.toml  sample_wallets.txt
tests/: test_addresses.py  test_analysis.py  test_birdeye.py  test_service.py  test_token_intel.py  test_webapp.py
wallet_analyzer/: __init__.py  __main__.py  addresses.py  analysis.py  birdeye.py  cli.py  reporting.py  service.py  token_intel.py  webapp.py
wallet_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
wallet_analyzer/webui/: app.js  index.html  styles.css
